sum_lst = {}

# Processing 
subdir('fft')
subdir('agc')
subdir('window')
subdir('multiply')
subdir('amplitude')
subdir('cast')
subdir('scale')
subdir('filter')
subdir('soapy')
subdir('audio')
subdir('fm')
subdir('fold')
subdir('pad')
subdir('unpad')
subdir('overlap_add')
subdir('speech_recognition')
subdir('invert')
subdir('multiply_constant')
subdir('take')

# Graphical
subdir('lineplot')
subdir('waterfall')
subdir('spectrogram')
subdir('constellation')
subdir('remote')

summary(sum_lst, section: 'Modules', bool_yn: true)