executable(
    'text',
    'text.cc',
    dependencies: libjetstream_dep,
    install: false,
)

executable(
    'text-advanced',
    'text_advanced.cc',
    dependencies: libjetstream_dep,
    install: false,
)

executable(
    'shapes',
    'shapes.cc',
    dependencies: libjetstream_dep,
    install: false,
)

executable(
    'shapes-advanced',
    'shapes_advanced.cc',
    dependencies: libjetstream_dep,
    install: false,
)
