test('memory-token', executable(
    'jetstream-memory-token', 'token.cc',
    dependencies: [libjetstream_dep, catch2_dep],
), is_parallel: false, timeout: 0)

test('memory-types', executable(
    'jetstream-memory-types', 'types.cc',
    dependencies: [libjetstream_dep, catch2_dep],
), is_parallel: false, timeout: 0)

test('memory-storage', executable(
    'jetstream-memory-storage', 'storage.cc',
    dependencies: [libjetstream_dep, catch2_dep],
), is_parallel: false, timeout: 0)