test('memory-token', executable(
    'jetstream-memory-token', 'token.cc',
    dependencies: [libjetstream_dep, catch2_dep],
), is_parallel: false, timeout: 0)

test('memory-buffer', executable(
    'jetstream-memory-buffer', 'buffer.cc',
    dependencies: [libjetstream_dep, catch2_dep],
), is_parallel: false, timeout: 0)

test('memory-tensor', executable(
    'jetstream-memory-tensor', 'tensor.cc',
    dependencies: [libjetstream_dep, catch2_dep],
), is_parallel: false, timeout: 0)
